Update DISTRIBUTED DATABASE METHODS AND SYSTEMS.html

--- a/USPTO/US-20240412198-A1/DISTRIBUTED DATABASE METHODS AND SYSTEMS.html
+++ b/USPTO/US-20240412198-A1/DISTRIBUTED DATABASE METHODS AND SYSTEMS.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>US-20240412198-A1 - Patent Public Search | USPTO</title>
-    <link href="/dirsearch-public/css/patents.css" rel="stylesheet" />
+    <link href="/patents.css" rel="stylesheet" />
 </head>
 <body>
 <div id="container">
